# C-_meson_conan_catch2_template

./: .gitignore  README.md  build.sh  conanfile.txt  example_install.sh  meson.build
src/: main.cpp  meson.build
src/libapp/: doubler.cpp  doubler.hpp  doubler_test.cpp  meson.build
subprojects/: .gitignore
